name:             syntax-trees-fork-bairyn
-- Don't forget to bump the tag too.
version:          0.1.2
synopsis:         Convert between different Haskell syntax trees.  Bairyn's fork.
description:      Provides an instance that translates
      This is a fork of Dominic Orchard's syntax-trees package that is patched
      to build on Haskell's more modern ecosystem.  My only contributions as of
      this version are the addition of an import of "System.IO.Unsafe".
      .
		  haskell-src-exts expression trees into Template Haskell expression
		  trees in a way that depends only on the haskell-src-exts syntax tree
		  and agreement on the pretty-printed representation of
		  Haskell between haskell-src-exts pretty-printer and
		  Template Haskell quotations (as opposed to depending on
		  both TH and haskell-src-exts syntax tree representations).
		  .
		  Instead of converting between data types, 
		  haskell-src-exts syntax trees are pretty-printed and wrapped in
		  a TH quotation which is then interpreted as a Haskell program,
		  yielding a TH Exp tree. Free variables in the haskell-src-exts tree are
		  preserved by lifting them to TH splices prior to pretty-printing.
		  .
license:          BSD3
license-file:     LICENSE
author:           Dominic Orchard,
                  Byron Johnson
maintainer:       dom.orchard@gmail.com,
                  ByronJohnsonFP@gmail.com
build-type:       Simple
cabal-version:    >= 1.6
category: 	  Language
extra-source-files:  examples/Foo.lhs

library
  build-depends:    base >= 3 && <5,
                    mtl,
                    haskell-src-exts >=1.2,
                    template-haskell,
                    uniplate,
                    hint
  extensions:       TemplateHaskell, MultiParamTypeClasses
  exposed-modules:  Fork.Bairyn.Language.Haskell.SyntaxTrees
                    Fork.Bairyn.Language.Haskell.SyntaxTrees.Main
                    Fork.Bairyn.Language.Haskell.SyntaxTrees.ExtsToTH

source-repository head
  type:     git
  location: git@github.com:bairyn/syntax-trees-fork-bairyn.git

source-repository this
  type:     git
  location: git@github.com:bairyn/syntax-trees-fork-bairyn.git
  tag:      v0.1.2
